--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "input-otp": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
     "node-appwrite": "^14.1.0",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "recharts": "^2.15.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
